ref: added student view and logic

--- a/lms/templates/librarian/books.html
+++ b/lms/templates/librarian/books.html
@@ -12,7 +12,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
-                                <a href="{{ url_for('librarian.books')}}">Dashboard</a>
+                                <a href="{{ url_for('librarian.dashboard')}}">Dashboard</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
                                 Books
