--- a/lms/templates/librarian/author.html
+++ b/lms/templates/librarian/author.html
@@ -7,7 +7,7 @@
             <!-- Page header -->
             <div class="border-bottom pb-3 mb-3 d-md-flex align-items-center justify-content-between">
                 <div class="mb-2 mb-lg-0">
-                    <h1 class="mb-0 h2 fw-bold">Authors</h1>
+                    <h1 class="mb-0 h2 fw-bold">Authors <span class="fs-5 text-muted">({{author.total}} )</span></h1>
                     <!-- Breadcrumb -->
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
