--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -32,17 +32,16 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between mb-3 lh-1">
                         <div>
-                            <span class="fs-6 text-uppercase fw-semibold">Sales</span>
+                            <span class="fs-6 text-uppercase fw-semibold">Category</span>
                         </div>
                         <div>
                             <span class="fe fe-shopping-bag fs-3 text-primary"></span>
                         </div>
                     </div>
                     <h2 class="fw-bold mb-1">
-                        $10,800
+                        {{category.total}}
                     </h2>
-                    <span class="text-success fw-semibold"><i class="fe fe-trending-up me-1"></i>+20.9$</span>
-                    <span class="ms-1 fw-medium">Number of sales</span>
+                   
                 </div>
             </div>
         </div>
@@ -53,17 +52,16 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between mb-3 lh-1">
                         <div>
-                            <span class="fs-6 text-uppercase fw-semibold">Courses</span>
+                            <span class="fs-6 text-uppercase fw-semibold">Books</span>
                         </div>
                         <div>
                             <span class=" fe fe-book-open fs-3 text-primary"></span>
                         </div>
                     </div>
                     <h2 class="fw-bold mb-1">
-                        2,456
+                        {{book.total}}
                     </h2>
-                    <span class="text-danger fw-semibold">120+</span>
-                    <span class="ms-1 fw-medium">Number of pending</span>
+                   
                 </div>
             </div>
         </div>
@@ -81,10 +79,9 @@
                         </div>
                     </div>
                     <h2 class="fw-bold mb-1">
-                        1,22,456
+                        {{student.total}}
                     </h2>
-                    <span class="text-success fw-semibold"><i class="fe fe-trending-up me-1"></i>+1200</span>
-                    <span class="ms-1 fw-medium">Students</span>
+                 
                 </div>
             </div>
         </div>
@@ -95,17 +92,16 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between mb-3 lh-1">
                         <div>
-                            <span class="fs-6 text-uppercase fw-semibold">Instructor</span>
+                            <span class="fs-6 text-uppercase fw-semibold">Author</span>
                         </div>
                         <div>
                             <span class=" fe fe-user-check fs-3 text-primary"></span>
                         </div>
                     </div>
                     <h2 class="fw-bold mb-1">
-                        22,786
+                        {{author.total}}
                     </h2>
-                    <span class="text-success fw-semibold"><i class="fe fe-trending-up me-1"></i>+200</span>
-                    <span class="ms-1 fw-medium">Instructor</span>
+                  
                 </div>
             </div>
         </div>
