ref: made changes to auth file

--- a/lms/templates/admin/base.html
+++ b/lms/templates/admin/base.html
@@ -106,7 +106,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link " href="admin-course-category-single.html">
-                                        Issue Book
+                                        Issued Book
                                     </a>
                                 </li>
                             </ul>
