--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -114,7 +114,7 @@
                 <div
                     class="card-header align-items-center card-header-height d-flex justify-content-between align-items-center">
                     <div>
-                        <h4 class="mb-0">Earnings</h4>
+                        <h4 class="mb-0">Report Analysis</h4>
                     </div>
                     <div>
                         <div class="dropdown dropstart">
