--- a/lms/templates/librarian/base.html
+++ b/lms/templates/librarian/base.html
@@ -106,7 +106,12 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link " href="admin-course-category-single.html">
-                                        Issue Book
+                                        Issued Books
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link " href="admin-course-category-single.html">
+                                        Reserved Books
                                     </a>
                                 </li>
                             </ul>
