ref: updated return book logic

--- a/lms/templates/librarian/return_book.html
+++ b/lms/templates/librarian/return_book.html
@@ -39,6 +39,12 @@
                         <!-- row -->
                         <div class="row gx-3">
 
+                              <!-- input -->
+                              <div class="mb-3 txt">
+                                <h4>Book Title</h4>
+                                {{book_title}}
+                            </div>
+
                             <!-- input -->
                             <div class="mb-3 ">
                                 <h4>Book isbn</h4>
@@ -52,11 +58,10 @@
                             </div>
 
                              <!-- input -->
-                             <div class="mb-3 ">
-                                <h4>Librarian id</h4>
+                             <div class="mb-3 txt">
+                                <h4>Authorized Librarian</h4>
                                 {{librarian_id}}
                             </div>
-
 
                         </div>
                     </div>
