--- a/lms/templates/librarian/base.html
+++ b/lms/templates/librarian/base.html
@@ -105,10 +105,11 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link " href="admin-course-category-single.html">
+                                    <a class="nav-link " href="{{url_for('librarian.issued_book')}}">
                                         Issued Books
                                     </a>
                                 </li>
+                                
                                 <li class="nav-item">
                                     <a class="nav-link " href="admin-course-category-single.html">
                                         Reserved Books
@@ -144,6 +145,23 @@
                                 <li class="nav-item">
                                     <a class="nav-link   active  " href="{{ url_for('librarian.students')}}">
                                         All Students
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+
+                    <!-- Nav item -->
+                    <li class="nav-item ">
+                        <a class="nav-link   collapsed  " href="#" data-bs-toggle="collapse" data-bs-target="#navCMS"
+                            aria-expanded="false" aria-controls="navCMS">
+                            <i class="nav-icon fe fe-file me-2"></i> Analytics
+                        </a>
+                        <div id="navCMS" class="collapse  " data-bs-parent="#sideNavbar">
+                            <ul class="nav flex-column">
+                                <li class="nav-item">
+                                    <a class="nav-link   active  " href="{{ url_for('librarian.students')}}">
+                                        View Transactions
                                     </a>
                                 </li>
                             </ul>
