--- a/lms/templates/librarian/students.html
+++ b/lms/templates/librarian/students.html
@@ -246,6 +246,9 @@
                                                         <a class="dropdown-item"
                                                             href="{{ url_for('librarian.edit_student', student_id=student.id) }}"><i
                                                                 class="fe fe-edit dropdown-item-icon"></i>Edit</a>
+                                                                <a class="dropdown-item"
+                                                                href="{{ url_for('librarian.edit_student', student_id=student.id) }}"><i
+                                                                    class="fe fe-edit dropdown-item-icon"></i>Issue Book</a>
                                                         <button type="button" class="dropdown-item"
                                                             data-bs-toggle="modal" data-bs-target="#exampleModal">
                                                             <i class="fe fe-trash dropdown-item-icon"></i>Delete
