ref:added fine logic

--- a/lms/templates/librarian/base.html
+++ b/lms/templates/librarian/base.html
@@ -166,6 +166,15 @@
                                 </li>
                             </ul>
                         </div>
+                        <div id="navCMS" class="collapse  " data-bs-parent="#sideNavbar">
+                            <ul class="nav flex-column">
+                                <li class="nav-item">
+                                    <a class="nav-link   active  " href="{{ url_for('librarian.fine')}}">
+                                        View Students Fines 
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
 
