--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -105,6 +105,69 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-xl-3 col-lg-6 col-md-12 col-12">
+            <!-- Card -->
+            <div class="card mb-4">
+                <!-- Card body -->
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between mb-3 lh-1">
+                        <div>
+                            <span class="fs-6 text-uppercase fw-semibold">Issued Books</span>
+                        </div>
+                        <div>
+                            <span class=" fe fe-book fs-3 text-primary"></span>
+                        </div>
+                    </div>
+                    <h2 class="fw-bold mb-1">
+                        {{issue.total}}
+                    </h2>
+                  
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-6 col-md-12 col-12">
+            <!-- Card -->
+            <div class="card mb-4">
+                <!-- Card body -->
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between mb-3 lh-1">
+                        <div>
+                            <span class="fs-6 text-uppercase fw-semibold">Student Fine</span>
+                        </div>
+                        <div>
+                            <span class=" fe fe-file fs-3 text-primary"></span>
+                        </div>
+                    </div>
+                    <h2 class="fw-bold mb-1">
+                        {{fine.total}}
+                    </h2>
+                  
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-6 col-md-12 col-12">
+            <!-- Card -->
+            <div class="card mb-4">
+                <!-- Card body -->
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between mb-3 lh-1">
+                        <div>
+                            <span class="fs-6 text-uppercase fw-semibold">Reserved Books</span>
+                        </div>
+                        <div>
+                            <span class=" fe fe-book fs-3 text-primary"></span>
+                        </div>
+                    </div>
+                    <h2 class="fw-bold mb-1">
+                        {{reservation.total}}
+                    </h2>
+                  
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-xl-8 col-lg-12 col-md-12 col-12">
