ref: made changes to librarian dashboard

--- a/lms/templates/student/base.html
+++ b/lms/templates/student/base.html
@@ -185,7 +185,7 @@
                                 <a class="rounded-circle" href="#" role="button" id="dropdownUser"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     <div class="avatar avatar-md avatar-indicators avatar-online">
-                                        <img alt="avatar" src="../../assets/images/avatar/avatar-1.jpg"
+                                        <img alt="avatar" src="{{ url_for('librarian.upload', filename=current_user.img_upload)}}"
                                             class="rounded-circle">
                                     </div>
                                 </a>
@@ -193,7 +193,7 @@
                                     <div class="dropdown-item">
                                         <div class="d-flex">
                                             <div class="avatar avatar-md avatar-indicators avatar-online">
-                                                <img alt="avatar" src="../../assets/images/avatar/avatar-1.jpg"
+                                                <img alt="avatar" src="{{ url_for('librarian.upload', filename=current_user.img_upload)}}"
                                                     class="rounded-circle">
                                             </div>
                                             <div class="ms-3 lh-1">
